[FLINK-39252][sqlserver] fix: replace Java 9+ APIs with Java 8 compatible code in SQL Server connector